// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly empty 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "white",
      "fontSize": 24,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`renders correctly text 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "white",
      "fontSize": 24,
      "fontWeight": "bold",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    All you had to do was follow the damn train CJ
  </Text>
</Text>
`;
